--- a/project/apc10.html
+++ b/project/apc10.html
@@ -12,43 +12,43 @@ layout: default
           Saisissez les 10 URLs des 10 produits que vous souhaitez surveiller sur Amazon
         </p>
         <form role="form" data-toggle="validator">
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url1" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Votre URL doit commencer par https://www.amazon.fr/" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url2" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url3" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url4" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url5" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url6" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url7" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url8" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url9" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="form-group">
+          <div class="input">
             <input type="url" class="form-control" id="url10" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
