--- a/project/apc10.html
+++ b/project/apc10.html
@@ -12,49 +12,52 @@ layout: default
           Saisissez les 10 URLs des 10 produits que vous souhaitez surveiller sur Amazon
         </p>
         <form role="form" data-toggle="validator">
-          <div style="opacity:1">
-            <input type="url" id="url1" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Votre URL doit commencer par https://www.amazon.fr/" required>
+          <div>
+            <input type="url" id="url1" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Votre URL doit commencer par https://www.amazon.fr/" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div style="opacity:1">
-            <input type="url" id="url2" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+          <div>
+            <input type="url" id="url2" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div style="opacity:1">
-            <input type="url" id="url3" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+          <div>
+            <input type="url" id="url3" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div style="opacity:1">
-            <input type="url" id="url4" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+          <div>
+            <input type="url" id="url4" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div class="input">
-            <input type="url" id="url5" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+          <div>
+            <input type="url" id="url5" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div style="opacity:1">
-            <input type="url" id="url6" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+          <div>
+            <input type="url" id="url6" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div style="opacity:1">
-            <input type="url" id="url7" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+          <div>
+            <input type="url" id="url7" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div style="opacity:1">
-            <input type="url" id="url8" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+          <div>
+            <input type="url" id="url8" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div style="opacity:1">
-            <input type="url" id="url9" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+          <div>
+            <input type="url" id="url9" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <div style="opacity:1">
-            <input type="url" id="url10" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+          <div>
+            <input type="url" id="url10" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <input type="hidden" id="userID" data-ms-member="id">
           <button type="submit" class="btn btn-default action-btn" id="btn">Tracker ces produits</button>
         </form>
+        <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
+            <a href="/members/welcome">Retourner au dashboard</a>
+        </p>
       </div>
     </div> 
 </section>
