--- a/members/welcome.html
+++ b/members/welcome.html
@@ -12,8 +12,9 @@ layout: default
             Personnalisez votre profil en cliquant <a href="#/ms/profile">ici</a>
         </p>
         <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
-            Cliquez <a href="/project/summary">ici</a> pour accéder au contenu de votre projet 🗂
+            Votre plan actuel est <div data-ms-member="membership.name"><div> 🎉
         </p>
+        <iframe class="airtable-embed" src="https://airtable.com/embed/shrDl3EiOv3StiZy8?backgroundColor=cyan&layout=card&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
     </div> 
 </section>
