--- a/members/welcome.html
+++ b/members/welcome.html
@@ -5,7 +5,7 @@ layout: default
 <section class="min-h-screen relative bg-top md:bg-left bg-no-repeat bg-contain">
     <div class="container pt-8 lg:pt-16">
       <div class="w-full md:w-1/2 mt-8 lg:mt-16 xxl:mt-32">
-        <h1 class="text-2xl sm:text-3xl md:text-4xl xl:text-5xl text-navy mt-2 lg:mt-4">
+        <h1 class="text-2xl sm:text-3xl md:text-4xl xl:text-5xl text-navy mt-2 lg:mt-4" id="userID" data-ms-member="id">
           Bienvenue sur votre espace personnel.
         </h1>
         <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
@@ -14,10 +14,33 @@ layout: default
         <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
             Votre plan actuel est <div data-ms-member="membership.name"><div> 🎉
         </p>
-        <iframe class="airtable-embed" src="https://airtable.com/embed/shrDl3EiOv3StiZy8?backgroundColor=cyan&layout=card&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+          <h3>URL#1</h3>
+          <div id="url1"></div>
+          <div id="price1"></div>
+          <h3>All data</h3>
+          <div id="all"></div>
       </div>
     </div> 
 </section>
+    
+<script>
+window.onload = function(){
+    var request = new XMLHttpRequest();
+    var id = document.getElementById("userID").value;
+    request.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+            console.log(this.responseText);
+            document.getElementById("url1").value = this.responseText.records[0].fields.URL;
+            document.getElementById("price1").value = this.responseText.records[0].fields.Prix;
+            document.getElementById("all").value = this.responseText;
+        }
+    };
+
+    request.open('GET', 'https://api.airtable.com/v0/appNWCk04VryqPCTS/Amazon%20Price%20Checker?maxRecords=10&view=All%20URLs&filterByFormula=%7BMemberstack%20ID%7D%20%3D%20%27' + id + '%27');
+    request.setRequestHeader('Authorization', 'Bearer keykvY3PwUzBpmFy2');
+    request.send();
+}
+</script>
   
 <footer class="bg-navy-light min-h-screen flex flex-col">
   <div class="py-12 lg:py-16 flex-grow banner flex items-center">
