--- a/members/welcome.html
+++ b/members/welcome.html
@@ -12,7 +12,7 @@ layout: default
             Personnalisez votre profil en cliquant <a href="#/ms/profile">ici</a>
         </p>
         <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
-            Votre plan actuel est <div data-ms-member="membership.name"><div> 🎉
+            Votre plan actuel est <div data-ms-member="membership.name"></div> 🎉
         </p>
         <div style="display: none" id="msID" data-ms-member="id"></div>
         <h1 class="text-2xl sm:text-3xl md:text-4xl xl:text-5xl text-navy mt-2 lg:mt-4">
