--- a/members/welcome.html
+++ b/members/welcome.html
@@ -30,7 +30,7 @@ window.onload = function(){
     request.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
             console.log(this.responseText);
-            document.getElementById("all").value = this.responseText;
+            document.getElementById("all").value = JSON.stringify(this.responseText);
         }
     };
 
