--- a/members/welcome.html
+++ b/members/welcome.html
@@ -35,6 +35,34 @@ layout: default
             <td id="url3"></td>
             <td id="price3"></td>
           </tr>
+            <tr>
+            <td id="url4"></td>
+            <td id="price4"></td>
+          </tr>
+            <tr>
+            <td id="url5"></td>
+            <td id="price5"></td>
+          </tr>
+            <tr>
+            <td id="url6"></td>
+            <td id="price6"></td>
+          </tr>
+            <tr>
+            <td id="url7"></td>
+            <td id="price7"></td>
+          </tr>
+            <tr>
+            <td id="url8"></td>
+            <td id="price8"></td>
+          </tr>
+            <tr>
+            <td id="url9"></td>
+            <td id="price9"></td>
+          </tr>
+            <tr>
+            <td id="url10"></td>
+            <td id="price10"></td>
+          </tr>
         </table>
       </div>
     </div> 
@@ -48,11 +76,48 @@ window.onload = function(){
         if (this.readyState == 4 && this.status == 200) {
             var json = JSON.parse(this.responseText);
             console.log(json);
-            //var response = JSON.stringify(this.responseText);
-            //document.getElementById("all").innerHTML = response;
             
-            var url1 = json.records[0].id;
-            console.log(url1);
+            var url1 = json.records[0].fields.URL;
+            document.getElementById("url1").innerHTML = url1;
+            var url2 = json.records[1].fields.URL;
+            document.getElementById("urlé").innerHTML = url2;
+            var url3 = json.records[2].fields.URL;
+            document.getElementById("url3").innerHTML = url3;
+            var url4 = json.records[3].fields.URL;
+            document.getElementById("url4").innerHTML = url4;
+            var url5 = json.records[4].fields.URL;
+            document.getElementById("url5").innerHTML = url5;
+            var url6 = json.records[5].fields.URL;
+            document.getElementById("url6").innerHTML = url6;
+            var url7 = json.records[6].fields.URL;
+            document.getElementById("url7").innerHTML = url7;
+            var url8 = json.records[7].fields.URL;
+            document.getElementById("url8").innerHTML = url8;
+            var url9 = json.records[8].fields.URL;
+            document.getElementById("url9").innerHTML = url9;
+            var url10 = json.records[9].fields.URL;
+            document.getElementById("url10").innerHTML = url10;
+            
+            var price1 = json.records[0].fields.Prix;
+            document.getElementById("price1").innerHTML = price1;
+            var price2 = json.records[1].fields.Prix;
+            document.getElementById("price2").innerHTML = price2;
+            var price3 = json.records[2].fields.Prix;
+            document.getElementById("price3").innerHTML = price3;
+            var price4 = json.records[3].fields.Prix;
+            document.getElementById("price4").innerHTML = price4;
+            var price5 = json.records[4].fields.Prix;
+            document.getElementById("price5").innerHTML = price5;
+            var price6 = json.records[5].fields.Prix;
+            document.getElementById("price6").innerHTML = price6;
+            var price7 = json.records[6].fields.Prix;
+            document.getElementById("price7").innerHTML = price7;
+            var price8 = json.records[7].fields.Prix;
+            document.getElementById("price8").innerHTML = price8;
+            var price9 = json.records[8].fields.Prix;
+            document.getElementById("price9").innerHTML = price9;
+            var price10 = json.records[9].fields.Prix;
+            document.getElementById("price10").innerHTML = price10;
         }
     };
 
