--- a/members/welcome.html
+++ b/members/welcome.html
@@ -80,7 +80,7 @@ window.onload = function(){
             var url1 = json.records[0].fields.URL;
             document.getElementById("url1").innerHTML = url1;
             var url2 = json.records[1].fields.URL;
-            document.getElementById("urlé").innerHTML = url2;
+            document.getElementById("url2").innerHTML = url2;
             var url3 = json.records[2].fields.URL;
             document.getElementById("url3").innerHTML = url3;
             var url4 = json.records[3].fields.URL;
