--- a/members/welcome.html
+++ b/members/welcome.html
@@ -98,25 +98,25 @@ window.onload = function(){
             var url10 = json.records[9].fields.URL;
             document.getElementById("url10").innerHTML = url10;
             
-            var price1 = json.records[0].fields.Prix;
+            var price1 = json.records[0].fields["Dernier prix relevé"];
             document.getElementById("price1").innerHTML = price1;
-            var price2 = json.records[1].fields.Prix;
+            var price2 = json.records[1].fields["Dernier prix relevé"];
             document.getElementById("price2").innerHTML = price2;
-            var price3 = json.records[2].fields.Prix;
+            var price3 = json.records[2].fields["Dernier prix relevé"];
             document.getElementById("price3").innerHTML = price3;
-            var price4 = json.records[3].fields.Prix;
+            var price4 = json.records[3].fields["Dernier prix relevé"];
             document.getElementById("price4").innerHTML = price4;
-            var price5 = json.records[4].fields.Prix;
+            var price5 = json.records[4].fields["Dernier prix relevé"];
             document.getElementById("price5").innerHTML = price5;
-            var price6 = json.records[5].fields.Prix;
+            var price6 = json.records[5].fields["Dernier prix relevé"];
             document.getElementById("price6").innerHTML = price6;
-            var price7 = json.records[6].fields.Prix;
+            var price7 = json.records[6].fields["Dernier prix relevé"];
             document.getElementById("price7").innerHTML = price7;
-            var price8 = json.records[7].fields.Prix;
+            var price8 = json.records[7].fields["Dernier prix relevé"];
             document.getElementById("price8").innerHTML = price8;
-            var price9 = json.records[8].fields.Prix;
+            var price9 = json.records[8].fields["Dernier prix relevé"];
             document.getElementById("price9").innerHTML = price9;
-            var price10 = json.records[9].fields.Prix;
+            var price10 = json.records[9].fields["Dernier prix relevé"];
             document.getElementById("price10").innerHTML = price10;
         }
     };
