--- a/project/apc10.html
+++ b/project/apc10.html
@@ -17,39 +17,39 @@ layout: default
             <div class="help-block with-errors"></div>
           </div>
           <div>
-            <input type="url" id="url2" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" id="url2" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" >
             <div class="help-block with-errors"></div>
           </div>
           <div>
-            <input type="url" id="url3" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" id="url3" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" >
             <div class="help-block with-errors"></div>
           </div>
           <div>
-            <input type="url" id="url4" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" id="url4" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" >
             <div class="help-block with-errors"></div>
           </div>
           <div>
-            <input type="url" id="url5" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" id="url5" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" >
             <div class="help-block with-errors"></div>
           </div>
           <div>
-            <input type="url" id="url6" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" id="url6" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" >
             <div class="help-block with-errors"></div>
           </div>
           <div>
-            <input type="url" id="url7" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" id="url7" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" >
             <div class="help-block with-errors"></div>
           </div>
           <div>
-            <input type="url" id="url8" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" id="url8" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" >
             <div class="help-block with-errors"></div>
           </div>
           <div>
-            <input type="url" id="url9" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" id="url9" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" >
             <div class="help-block with-errors"></div>
           </div>
           <div>
-            <input type="url" id="url10" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" id="url10" class="bg-pink-light" style="width:100%" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" >
             <div class="help-block with-errors"></div>
           </div>
           <input type="hidden" id="userID" data-ms-member="id">
