--- a/members/welcome.html
+++ b/members/welcome.html
@@ -24,7 +24,7 @@ layout: default
             <th>Dernier prix relevé</th>
           </tr>
           <tr>
-            <td id="url1"></td>
+            <td id="prod1" href="url1"></td>
             <td id="price1"></td>
           </tr>
           <tr>
@@ -78,7 +78,10 @@ window.onload = function(){
             console.log(json);
             
             var url1 = json.records[0].fields.URL;
-            document.getElementById("url1").innerHTML = url1;
+            document.getElementById("url1").value = url1;
+            var prod1 = json.records[0].fields.Product;
+            document.getElementById("prod1").innerHTML = prod1;
+            
             var url2 = json.records[1].fields.URL;
             document.getElementById("url2").innerHTML = url2;
             var url3 = json.records[2].fields.URL;
