--- a/members/welcome.html
+++ b/members/welcome.html
@@ -28,39 +28,39 @@ layout: default
             <td id="price1"></td>
           </tr>
           <tr>
-            <td id="url2"></td>
+            <td id="prod2"></td>
             <td id="price2"></td>
           </tr>
           <tr>
-            <td id="url3"></td>
+            <td id="prod3"></td>
             <td id="price3"></td>
           </tr>
             <tr>
-            <td id="url4"></td>
+            <td id="prod4"></td>
             <td id="price4"></td>
           </tr>
             <tr>
-            <td id="url5"></td>
+            <td id="prod5"></td>
             <td id="price5"></td>
           </tr>
             <tr>
-            <td id="url6"></td>
+            <td id="prod6"></td>
             <td id="price6"></td>
           </tr>
             <tr>
-            <td id="url7"></td>
+            <td id="prod7"></td>
             <td id="price7"></td>
           </tr>
             <tr>
-            <td id="url8"></td>
+            <td id="prod8"></td>
             <td id="price8"></td>
           </tr>
             <tr>
-            <td id="url9"></td>
+            <td id="prod9"></td>
             <td id="price9"></td>
           </tr>
             <tr>
-            <td id="url10"></td>
+            <td id="prod10"></td>
             <td id="price10"></td>
           </tr>
         </table>
