--- a/project/apc10.html
+++ b/project/apc10.html
@@ -78,7 +78,7 @@ layout: default
 <script>
 window.onload = function(){
     var request = new XMLHttpRequest();
-    var id = document.getElementById("msID").value;
+    var id = document.getElementById("userID").value;
     var url1 = document.getElementById("url1").value;
     var url2 = document.getElementById("url2").value;
     var url3 = document.getElementById("url3").value;
