--- a/members/welcome.html
+++ b/members/welcome.html
@@ -25,43 +25,43 @@ layout: default
           </tr>
           <tr>
             <td id="prod1"></td>
-            <td id="price1"></td>
+            <td class="right-col" id="price1"></td>
           </tr>
           <tr>
             <td id="prod2"></td>
-            <td id="price2"></td>
+            <td class="right-col" id="price2"></td>
           </tr>
           <tr>
             <td id="prod3"></td>
-            <td id="price3"></td>
+            <td class="right-col" id="price3"></td>
           </tr>
             <tr>
             <td id="prod4"></td>
-            <td id="price4"></td>
+            <td class="right-col" id="price4"></td>
           </tr>
             <tr>
             <td id="prod5"></td>
-            <td id="price5"></td>
+            <td class="right-col" id="price5"></td>
           </tr>
             <tr>
             <td id="prod6"></td>
-            <td id="price6"></td>
+            <td class="right-col" id="price6"></td>
           </tr>
             <tr>
             <td id="prod7"></td>
-            <td id="price7"></td>
+            <td class="right-col" id="price7"></td>
           </tr>
             <tr>
             <td id="prod8"></td>
-            <td id="price8"></td>
+            <td class="right-col" id="price8"></td>
           </tr>
             <tr>
             <td id="prod9"></td>
-            <td id="price9"></td>
+            <td class="right-col" id="price9"></td>
           </tr>
             <tr>
             <td id="prod10"></td>
-            <td id="price10"></td>
+            <td class="right-col" id="price10"></td>
           </tr>
         </table>
       </div>
