--- a/members/welcome.html
+++ b/members/welcome.html
@@ -18,7 +18,7 @@ layout: default
         <h1 class="text-2xl sm:text-3xl md:text-4xl xl:text-5xl text-navy mt-2 lg:mt-4">
             Votre tableau de suivi
         </h1>
-        <table style="width:100%" class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
+        <table>
           <tr>
             <th>URL Amazon</th>
             <th>Dernier prix relevé</th>
