--- a/members/welcome.html
+++ b/members/welcome.html
@@ -20,8 +20,8 @@ layout: default
         </h1>
         <table>
           <tr>
-            <th>URL Amazon</th>
-            <th>Dernier prix relevé</th>
+            <th>Produit</th>
+            <th>Prix</th>
           </tr>
           <tr>
             <td id="prod1"></td>
