--- a/members/welcome.html
+++ b/members/welcome.html
@@ -21,7 +21,7 @@ layout: default
         <table class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
           <tr>
             <th>Produit</th>
-            <th>Prix</th>
+            <th class="right-col">Prix</th>
           </tr>
           <tr>
             <td id="prod1"></td>
