--- a/members/welcome.html
+++ b/members/welcome.html
@@ -9,7 +9,7 @@ layout: default
             Bienvenue sur votre espace personnel.
         </h1>
         <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
-            Personnalisez votre profil en cliquant <a href="#/ms/profile">ici</a>
+            Personnaliser votre profil en cliquant <a href="#/ms/profile"><u>ici</u></a> 🏠
         </p>
         <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
             Votre plan actuel est <a href="/project/apc10"><u><span class="text-lg sm:text-xl md:text-2xl text-navy mt-4" data-ms-member="membership.name" href="/project/apc10"></span></u> 📝</a>
@@ -64,6 +64,9 @@ layout: default
             <td class="right-col" id="price10"></td>
           </tr>
         </table>
+        <p class="text-md sm:text-xl md:text-2xl text-navy mt-4">
+           <a href="#/ms/logout"><u>Déconnexion</u></a> 👋
+        </p>
       </div>
     </div> 
 </section>
