--- a/members/welcome.html
+++ b/members/welcome.html
@@ -80,6 +80,12 @@ window.onload = function(){
             var json = JSON.parse(this.responseText);
             console.log(json);
             
+            MemberStack.onReady.then(function(member) { 
+                var rec = json.records[0].fields.Member[0];
+                }
+                member.updateMetaData(rec
+            })
+            
             var url1 = json.records[0].fields.URL;
             var prod1 = json.records[0].fields.Product;
             document.getElementById("prod1").innerHTML = '<a href=' + url1 + ' target="_blank">' + prod1 + '</a>';
