--- a/members/welcome.html
+++ b/members/welcome.html
@@ -82,8 +82,7 @@ window.onload = function(){
             
             MemberStack.onReady.then(function(member) { 
                 var rec = json.records[0].fields.Member[0];
-                }
-                member.updateMetaData(rec
+                member.updateMetaData(rec);
             })
             
             var url1 = json.records[0].fields.URL;
