--- a/members/welcome.html
+++ b/members/welcome.html
@@ -82,7 +82,7 @@ window.onload = function(){
             
             MemberStack.onReady.then(function(member) { 
                 var metaData = {
-                    rec: json.records[0].fields.Member[0];
+                    rec: json.records[0].fields.Member[0], //"recRaFLxaas8XAAOR"
                 }
                 member.updateMetaData(metaData)
             })
