--- a/members/welcome.html
+++ b/members/welcome.html
@@ -94,6 +94,15 @@ window.onload = function(){
                 asyncCall();
             })
             
+            for (var i = 0; i < json.records.length; i++) {
+                var count = i + 1;
+                var prod = "prod" + count;
+                var price = "price" + count;
+                document.getElementById(prod).innerHTML = '<a href=' + json.records[0].fields.URL + ' target="_blank">' + json.records[0].fields.Product + '</a>';
+                document.getElementById(price).innerHTML = json.records[0].fields.Prix + "€";   
+            }
+            
+            /*
             var url1 = json.records[0].fields.URL;
             var prod1 = json.records[0].fields.Product;
             document.getElementById("prod1").innerHTML = '<a href=' + url1 + ' target="_blank">' + prod1 + '</a>';
@@ -152,11 +161,12 @@ window.onload = function(){
             var prod10 = json.records[9].fields.Product;
             document.getElementById("prod10").innerHTML = '<a href=' + url10 + ' target="_blank">' + prod10 + '</a>';
             var price10 = json.records[9].fields.Prix;
-            document.getElementById("price10").innerHTML = price10 + "€"; 
+            document.getElementById("price10").innerHTML = price10 + "€";
+            */
         }
     };
 
-    request.open('GET', 'https://api.airtable.com/v0/appNWCk04VryqPCTS/Amazon%20Price%20Checker?maxRecords=10&view=All%20URLs&filterByFormula=%7BMemberstack%20ID%7D%20%3D%20%27' + id + '%27');
+    request.open('GET', 'https://api.airtable.com/v0/appNWCk04VryqPCTS/Amazon%20Price%20Checker?maxRecords=10&view=All%20URLs&filterByFormula=%3DAND%28%7BMemberstack%20ID%7D%3D%27' + id + '%27%2C%7BURL%20tracked%3F%7D%29');
     request.setRequestHeader('Authorization', 'Bearer keykvY3PwUzBpmFy2');
     request.send();
 }
