--- a/project/apc10.html
+++ b/project/apc10.html
@@ -147,7 +147,7 @@ window.onload = function(){
         }
     };
 
-    request.open('GET', 'https://api.airtable.com/v0/appNWCk04VryqPCTS/Amazon%20Price%20Checker?maxRecords=10&view=All%20URLs&filterByFormula=%3DAND%28%7BMemberstack%20ID%7D%3D%27' + id + '%27%2C%7BURL%20tracked%3F%7D%29&sort%5B0%5D%5Bfield%5D=Input&sort%5B0%5D%5Bdirection%5D=desc');
+    request.open('GET', 'https://api.airtable.com/v0/appNWCk04VryqPCTS/Amazon%20Price%20Checker?maxRecords=10&view=All%20URLs&filterByFormula=%3DAND%28%7BMemberstack%20ID%7D%3D%27' + id + '%27%2C%7BURL%20tracked%3F%7D%29&sort%5B0%5D%5Bfield%5D=Input&sort%5B0%5D%5Bdirection%5D=asc');
     request.setRequestHeader('Authorization', 'Bearer keykvY3PwUzBpmFy2');
     request.send();
 }
