--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
           reposez-vous 😎
         </p>
         <div class="sm:inline-block mb-8">
-          <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" 
+          <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup"
             target="_blank" class="typeform-share btn bg-green-light text-navy mt-8 shadow-navy border-navy"
             onClick="contactFb()">
             Demander un audit
@@ -376,7 +376,7 @@ layout: default
       </div>
 
       <div class="text-center">
-        <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" 
+        <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank"
           class="typeform-share btn bg-white text-navy mt-8 shadow-navy border-navy" onClick="contactFb()">
           Demander un audit
         </a>
@@ -482,7 +482,7 @@ layout: default
       </div>
 
       <div class="text-center">
-        <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" 
+        <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank"
           class="typeform-share btn bg-green-light text-navy mt-8 shadow-navy border-navy" onClick="contactFb()">
           Demander un audit
         </a>
@@ -539,8 +539,8 @@ layout: default
     </h2>
 
     <div class="flex flex-wrap sm:-mx-12 mt-8 md:mt-16">
-      <div class="w-full md:w-1/2 md:px-12 mb-12 md:mb-0">
-        <img src="assets/img/mehdi-coly-automate-me.png" alt="Photo de Mehdi Coly" class="h-64 mb-8 md:mb-12 mx-auto md:mx-0">
+      <div class="w-full md:w-1/3 md:px-12 mb-12 md:mb-0">
+        <img src="assets/img/mehdi-coly-automate-me.png" alt="Photo de Mehdi Coly" class="h-48 mb-8 md:mb-12 mx-auto md:mx-0">
         <h3 class="font-display font-bold text-navy text-xl md:text-2xl">
           Mehdi Coly
         </h3>
@@ -554,8 +554,8 @@ layout: default
         </p>
       </div>
 
-      <div class="w-full md:w-1/2 md:px-12">
-        <img src="assets/img/jeremy-brunet-automate-me.png" alt="Photo de Jérémy Brunet" class="h-64 mb-8 md:mb-12 mx-auto md:mx-0">
+      <div class="w-full md:w-1/3 md:px-12">
+        <img src="assets/img/jeremy-brunet-automate-me.png" alt="Photo de Jérémy Brunet" class="h-48 mb-8 md:mb-12 mx-auto md:mx-0">
         <h3 class="font-display font-bold text-navy text-xl md:text-2xl">
           Jérémy Brunet
         </h3>
@@ -566,6 +566,21 @@ layout: default
           Titulaire d’un Master en Marketing et diplômé du CS50 d’Harvard, Jérémy est aussi un entrepreneur backé par
           Kima Ventures et The Family. Quand il n’est pas occupé à coder des automatisations, il passe son temps à
           apprendre à hacker et à tester les dernières nouveautés SaaS.
+        </p>
+      </div>
+
+      <div class="w-full md:w-1/3 md:px-12">
+        <img src="assets/img/christophe-allirol-automate-me.png" alt="Photo de Jérémy Brunet" class="h-48 mb-8 md:mb-12 mx-auto md:mx-0">
+        <h3 class="font-display font-bold text-navy text-xl md:text-2xl">
+          Christophe Allirol
+        </h3>
+        <p class="font-display text-navy text-lg md:text-xl mb-4">
+          Associé, musicien, et codeur
+        </p>
+        <p class="md:text-lg text-gray">
+          Quand Mehdi a su qu'il avait programmé un robot pour gérer la température de son appartement
+          automatiquement, il est tombé sous le charme. Vrai geek comme on en fait plus, à ses heures perdues,
+          il enseigne le violon. Et quand il a besoin de se relaxer, il code.
         </p>
       </div>
     </div>
@@ -582,7 +597,7 @@ layout: default
         On identifie pour vous les tâches chronophage qui pourraient être éliminées dans votre entreprise. L’audit est
         gratuit et sans engagement, promis, juré !
       </p>
-      <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" 
+      <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank"
         class="typeform-share btn bg-white text-navy shadow-green border-green mx-auto" onClick="contactFb()">
         Demander un audit
       </a>
